<resources>
    <string name="app_name">Lyve</string>

    <!-- ONBOARDING PROCESS -->
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_continue">Continue</string>
    <string name="title_welcome_back">Welcome back</string>
    <string name="title_join_us">Join us</string>
    <string name="desc_join_us">Let\'s make it happen</string>
    <string name="desc_welcome_back">What\'s up? Haven\'t heard from you!</string>
    <string name="txt_have_an_account">Already have an account?</string>
    <string name="txt_no_account_yet">Don\'t have an account yet?</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="btn_create_account">Create account</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="err_empty_field">Oops, this field couldn\'t be empty</string>
    <string name="err_invalid_email">Oops, invalid email address</string>
    <string name="err_invalid_pass">Oops, password should contain at least 6 characters</string>
    <string name="err_password_match">Oops, passwords doesn\'t match</string>
    <string name="txt_title_onboarding">One last step</string>
    <string name="txt_desc_onboarding">What do you want to be called?</string>
    <string name="hint_name">Enter your preferred name</string>

    <!-- SPLASH -->
    <string name="desc_splash">Welcome back</string>

    <!-- HOME PAGE -->
    <string name="desc_ppic">Profile picture</string>
    <string name="txt_following">Following</string>
    <string name="txt_all">All events</string>

    <!-- HOME INFO -->
    <string name="btn_attend">Attend</string>
    <string name="btn_alert_positive">OK</string>
    <string name="txt_alert_title_oops">Oops..</string>
    <string name="txt_alert_desc_oops">You\'re already attending to this activity</string>
    <string name="txt_alert_title_yay">Yay..</string>
    <string name="txt_alert_desc_yay">You\'re attending to this activity</string>
    <string name="txt_online_event">Online event</string>
    <string name="txt_click_to_navigate">Click to navigate</string>
    <string name="txt_about_activity">About the event</string>
    <string name="txt_time_desc">Times are displayed in your local time zone</string>
    <string name="txt_host_activity">Host of event</string>
    <string name="txt_attendees_activity">Attendees</string>

    <!-- CREATE EVENT -->
    <string name="title_bsh">Alright, let\'s create one</string>
    <string name="subtitle_bsh">But first..</string>
    <string name="btn_virtual_ac">Virtual</string>
    <string name="btn_physical_ac">Physical</string>
    <string name="title_basic_info">Basic information</string>
    <string name="title_date_time">Date &amp; time</string>
    <string name="title_select_date">Select date</string>
    <string name="title_select_time">Select time</string>
    <string name="txt_activity_name">Enter your event name</string>
    <string name="txt_activity_desc">Describe your event</string>
    <string name="txt_activity_location">Enter your event location</string>
    <string name="txt_start_date">Select start date</string>
    <string name="txt_start_time">Select start time</string>
    <string name="txt_event_image">Event image</string>
    <string name="txt_event_location">Event location</string>
    <string name="txt_event_url">Event URL</string>
    <string name="txt_switch">This is an online event</string>
    <string name="txt_end_date">Select end date</string>
    <string name="txt_end_time">Select end time</string>
    <string name="txt_select_image">Tap to select an image</string>
    <string name="btn_create_activity">Create event</string>
    <string name="alert_title">Limited events</string>
    <string name="alert_subtitle">Oops, you already have an event published!</string>
    <string name="alert_pos_btn">OK</string>

    <!-- NAV DRAWER -->
    <string name="menu_group_settings">Configure Lyve</string>
    <string name="menu_item_account">Account</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_dark_mode">Dark mode</string>
    <string name="menu_item_logout">Log out</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_search">Search</string>

    <!-- WELCOME PAGE -->
    <string name="txt_title_welcome">Oh hey!</string>
    <string name="txt_desc_welcome">Welcome abroad.</string>
    <string name="txt_title_welcome2">Our goal is</string>
    <string name="txt_desc_welcome2">to facilitate everything in social sense</string>
    <string name="txt_title_welcome3">Here we go..</string>
    <string name="txt_desc_welcome3">Let\'s make it happen</string>

    <!-- MENU -->
    <string name="menu_app_bar_search">Search</string>

    <!-- SEARCH FRAGMENT -->
    <string name="txt_lyve_members">Lyve members</string>
    <string name="txt_lyve_events">Lyve events</string>
    <string name="txt_not_found">Oops.. Nothing found!</string>
    <string name="btn_following">Following</string>
    <string name="btn_follow">Follow</string>

    <!-- PROFILE FRAGMENT -->
    <string name="tab_1">Events</string>
    <string name="tab_2">I\'m attending</string>
    <string name="tab_3">Requests</string>

    <!-- BOTTOM NAV -->
    <string name="title_menu_home">Home</string>
    <string name="title_menu_search">Explore</string>
    <string name="title_menu_pings">Pings</string>
    <string name="title_menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>