<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_chat"
            android:icon="@drawable/ic_chat_24dp"
            android:title="@string/menu_item_chat"/>
        <item android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/menu_item_search"/>
        <item android:id="@+id/menu_notification"
            android:icon="@drawable/ic_notification_24dp"
            android:title="@string/menu_item_notifications"/>
    </group>

    <item android:title="@string/menu_group_settings">
        <menu>
            <group android:id="@+id/settings"
                android:checkableBehavior="single">
                <item android:id="@+id/conf_notifications"
                    android:title="@string/menu_item_notifications"/>
                <item android:id="@+id/conf_dark_mode"
                    android:title="@string/menu_item_dark_mode"/>
                <item android:id="@+id/conf_log_out"
                    android:title="@string/menu_item_logout"/>
            </group>
        </menu>
    </item>

</menu>