<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_menu_home" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_menu_search" />
    <item
        android:id="@+id/pingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_ping_24dp"
        android:title="@string/title_menu_pings" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_menu_profile" />
</menu>