<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_5_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_title_onboarding"
        android:textSize="@dimen/title_twenty_two"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_5_horizontal" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_desc_onboarding"
        android:textSize="@dimen/diff_subtitle_fourteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_name"
        app:boxBackgroundColor="@color/transparent"
        app:boxCornerRadiusBottomEnd="@dimen/text_field_corner"
        app:boxCornerRadiusBottomStart="@dimen/text_field_corner"
        app:boxCornerRadiusTopEnd="@dimen/text_field_corner"
        app:boxCornerRadiusTopStart="@dimen/text_field_corner"
        app:boxStrokeColor="@color/textColorSecondary"
        app:errorContentDescription="@string/hint_name"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black_dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/field_padding"
            android:textCursorDrawable="@drawable/custom_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        style="@style/Buttons.MainAndDisabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"
        app:layout_constraintTop_toBottomOf="@+id/til_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>